# grape

./: .gitignore  .golangci.yml  BUILD.bazel  LICENSE.md  Makefile  Vagrantfile  go.mod  go.sum  readme.md
api/proto/ai/: demo.pb.go  demo.proto
api/proto/config/: protoc.sh
api/proto/demo/: demo.pb.go  demo.proto
api/proto/jwt/: demo.pb.go
api/proto/money/: demo.proto
api/proto/mq/: demo.pb.go
api/proto/oss/: demo.pb.go  demo.proto
api/proto/rbac/: demo.pb.go  demo.proto
api/proto/svlog/: svlog.proto
api/proto/user/: demo.pb.go  demo.proto
app/api-cms/: main.go
app/api-www/: BUILD.bazel  main.go
app/api-wx/: main.go
app/auth-jwt/: main.go  readme.md
app/auth-jwt/single/: single.go
app/auth-jwt/sv/: service_to_sv.go  (+1 more)
app/auth-rbac/: BUILD.bazel  main.go
app/auth-rbac/core/: header.go
app/gateway-api/: main.go  readme.md
app/sv-ai/: main.go
app/sv-config/: main.go
app/sv-job/: main.go
app/sv-log/: main.go  readme.md
app/sv-money/: readme.md
app/sv-mq/: main.go  readme.md
app/sv-notice/: main.go  readme.md
app/sv-oss/: main.go
app/sv-region/: main.go
app/sv-user/: main.go  readme.md
cmd/www/: main.go
configs/: configs.go  gateway-api-connfig.go  region_config.go  server_config.go
configs/commom/: com.go
configs/env/: config_test.go  mysql.go  notice_mail.go  redis.go
configs/errorcode/: errorcode.go  v2.go
configs/testdata/: data.go
deploy/: deploy-minikube.sh  docker_test.sh  minikube_test.sh
deploy/api-app/: Dockerfile  MakeConfig.mk  deploy.sh
deploy/api-cms/: Dockerfile  MakeConfig.mk
deploy/api-www/: Dockerfile
deploy/api-wx/: Dockerfile  MakeConfig.mk
deploy/auth-jwt/: Dockerfile  MakeConfig.mk
deploy/auth-rbac/: Dockerfile
deploy/base/: MakeBase.mk
deploy/gateway-api/: Dockerfile
deploy/sv-ai/: Dockerfile
deploy/sv-config/: Dockerfile  MakeConfig.mk
deploy/sv-log/: Dockerfile  MakeConfig.mk
deploy/sv-money/: Dockerfile  MakeConfig.mk
deploy/sv-mq/: Dockerfile  MakeConfig.mk  readme.md
deploy/sv-notice/: Dockerfile
deploy/sv-oss/: Dockerfile  MakeConfig.mk
deploy/sv-region/: Dockerfile
deploy/sv-user/: Dockerfile
deploy/vagrant/: provision.sh
deployments/: deploy-docker.sh  readme.md
deployments/api-app/: Dockerfile  Makefile  readme.md
deployments/api-cms/: Dockerfile
deployments/api-www/: Dockerfile  MakeConfig.mk  readme.md
deployments/api-wx/: Dockerfile
deployments/auth-jwt/: Dockerfile
deployments/auth-rbac/: Dockerfile  MakeConfig.mk
deployments/base/: MakeBase.mk  MakeDockerConfig.mk.example
deployments/docker/: readme.md
deployments/gateway-api/: Dockerfile  MakeConfig.mk  readme.md
deployments/sv-ai/: Dockerfile  MakeConfig.mk
deployments/sv-config/: Dockerfile
deployments/sv-log/: Dockerfile
deployments/sv-money/: Dockerfile  deploy.sh
deployments/sv-mq/: Dockerfile
deployments/sv-notice/: Dockerfile  MakeConfig.mk
deployments/sv-oss/: Dockerfile
deployments/sv-region/: Dockerfile  MakeConfig.mk
deployments/sv-user/: Dockerfile  MakeConfig.mk
doc/: cdn加速.md  代码测试.md  全链路跟踪.md  更新日志.md  服务之间鉴权.md  服务监控.md  测试.md  边缘集群部署.md  项目架构.md
doc/service/: api-cms.md  api-www.md  api-wx.md  auth-jwt.md  auth-rbac.md  sv-log.md  sv-region.md  sv-user.md
doc/study/: cron.md  k8s客服端ip.md  性能测试.md
doc/subject/: CodeReview规范.md  Vagrant.md  minikube.md  proto.md
docs/: ci-cd.md  dev.md  host.md  kubernetes-ali.md  代码构建.md  性能要求.md
docs/service/: api-app.md  gateway-api.md  sv-ai.md  sv-config.md  sv-log.md  sv-money.md  sv-mq.md  sv-notice.md  sv-oss.md  sv-region.md
docs/study/: docker.md  gorm.md  人脸识别.md
docs/subject/: CodeReview规范.md  bazel.md  client_web.md  cms架构.md  grafana.md  istio.md  mock.md  mysql.md  proto.md  swagger.md  项目目录结构.md
frontend/: auth-jwt-sv.html  auth-jwt.html  color.html  index.html  sv-region.html
frontend/cms/: login.html
frontend/sv/: sv-region.html  www.html
internal/app/auth-jwt/: BUILD.bazel  main.go
internal/app/auth-jwt/single/: single.go
internal/app/auth-jwt/sv/: service_to_sv.go  sv_test.go
internal/app/gateway-api/: BUILD.bazel  main.go
internal/app/gateway-api/core/: auth.go  data.go  handle.go
pkg/config/: configs.go  gateway-api-connfig.go  mail_config.go  private_mail.go.example  region_config.go  server_config.go
pkg/middleware/metric/: BUILD.bazel  init.go
pkg/model/: common.go
pkg/service/: services.go
pkg/service/rbac/: BUILD.bazel  rbac.go
pkg/service/rbac/power/: init.go  interface.go  power.go  power_mock_test.go  power_test.go
pkg/service/rbac/role/: BUILD.bazel  interface.go  mock.go  model.go  role.go  role_test.go
pkg/service/rbac/user/: BUILD.bazel  init.go  user.go
pkg/services/cookie/: BUILD.bazel  cookie_gin.go  cookie_test.go
pkg/services/rbac/power/: BUILD.bazel  init.go  model.go  power_mock.go  power_mock_test.go  power_mysql.go
pkg/svgrpc/: sv-notice.go  sv-notice_test.go
pkg/util/: util.go
pkg/util/jwt/: BUILD.bazel  jwt.go  jwt_test.go
proto/config/: config.pb.go  config.proto
proto/configproto/: config.pb.go  config.proto
proto/demo/: protoc.sh
proto/helloworld/: BUILD.bazel  readme.md
proto/jwt/: demo.proto
proto/money/: demo.pb.go
proto/mq/: demo.proto  protoc.sh
proto/notice/: notice.pb.go  notice.proto
proto/region/: demo.pb.go  demo.proto
proto/svlog/: svlog.pb.go
public/api-www/: readme.md
scripts/: mock.sh
scripts/sql/: account.sql  money.sql  rabc.sql  region.sql  site_menu.sql  statistics.sql  syconfig.sql  sylog.sql
test/api_www/: api_test.go  www.go
website/: auth-jwt.html  readme.md
website/cms/: login.html
website/rs/: comm.css
(+898 files in other folders)
