load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "grape/app/auth-rbac",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/rbac/power:go_default_library",
        "//pkg/rbac/user:go_default_library",
        "//pkg/util/conv:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
    ],
)

go_binary(
    name = "auth-rbac",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
