load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "grape/app/gateway",
    visibility = ["//visibility:private"],
    deps = ["//pkg/config:go_default_library"],
)

go_binary(
    name = "gateway",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
