load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "init.go",
        "metric.go",
    ],
    importpath = "grape/pkg/middleware/metric",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gin_gonic_gin//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
    ],
)
