load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["rbac.go"],
    importpath = "grape/pkg/rbac",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/rbac/role:go_default_library",
        "//pkg/rbac/user:go_default_library",
        "//pkg/util/conv:go_default_library",
    ],
)
