load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["cookie_gin.go"],
    importpath = "grape/pkg/util/cookie",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util/conv:go_default_library",
        "//pkg/util/jwt:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["cookie_test.go"],
    embed = [":go_default_library"],
)
