load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["jwt.go"],
    importpath = "grape/pkg/util/jwt",
    visibility = ["//visibility:public"],
    deps = ["@com_github_dgrijalva_jwt_go//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["jwt_test.go"],
    embed = [":go_default_library"],
)
