load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "init.go",
        "interface.go",
        "mock.go",
        "model.go",
        "user.go",
    ],
    importpath = "grape/pkg/rbac/user",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/rbac/role:go_default_library",
        "//pkg/util/conv:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["user_test.go"],
    embed = [":go_default_library"],
)
