load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "init.go",
        "interface.go",
        "model.go",
        "power.go",
        "power_mock.go",
        "power_mysql.go",
    ],
    importpath = "grape/pkg/rbac/power",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "power_mock_test.go",
        "power_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//pkg/util/conv:go_default_library"],
)
